Disable breadcrumbs / Add top margin to post comment area

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,8 +1,10 @@
-<script src="https://utteranc.es/client.js"
-        repo="somnisomni/somni.log"
-        issue-term="pathname"
-        label="Post Comments"
-        theme="preferred-color-scheme"
-        crossorigin="anonymous"
-        async>
-</script>
+<div class="comments">
+  <script src="https://utteranc.es/client.js"
+          repo="somnisomni/somni.log"
+          issue-term="pathname"
+          label="Post Comments"
+          theme="preferred-color-scheme"
+          crossorigin="anonymous"
+          async>
+  </script>
+</div>
