--- a/assets/css/extended/admonitions-fix.css
+++ b/assets/css/extended/admonitions-fix.css
@@ -1,3 +1,7 @@
 .admonition-content code:not(pre > code) {
   color: var(--code-fg) !important;
 }
+
+.admonition-header svg {
+  margin-right: 0.75em !important;
+}
