Update theme URL in footer

--- a/theme/layouts/partials/footer.html
+++ b/theme/layouts/partials/footer.html
@@ -17,7 +17,7 @@
     <span class="footer-powered-by">
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-        <a href="https://github.com/somnisomni/Hugo-PaperMod-somni" rel="noopener" target="_blank">PaperMod-somni</a>
+        <a href="https://github.com/somnisomni/somni.log/tree/main/theme" rel="noopener" target="_blank">PaperMod-somni</a>
     </span>
 
     <br />
