--- a/theme/assets/css/common/post-single.css
+++ b/theme/assets/css/common/post-single.css
@@ -58,6 +58,15 @@
     opacity: 50%;
 }
 
+.post-content h1,
+.post-content h2,
+.post-content h3,
+.post-content h4,
+.post-content h5,
+.post-content h6 {
+    font-family: var(--font-header);
+}
+
 .post-content h3,
 .post-content h4,
 .post-content h5,
