Apply "header" font to hugo-admonitions headers too

--- a/blog/assets/css/extended/admonitions-fix.css
+++ b/blog/assets/css/extended/admonitions-fix.css
@@ -7,6 +7,10 @@
   color: var(--code-fg) !important;
 }
 
+.admonition-header {
+  font-family: var(--font-header);
+}
+
 .admonition-header svg {
   margin-right: 0.75em !important;
 }
