Extra top padding for post header if there's no cover image

--- a/theme/assets/css/common/post-single.css
+++ b/theme/assets/css/common/post-single.css
@@ -488,6 +488,7 @@ img.in-text {
 }
 
 .post-header:not(:has(.entry-cover img)) {
+    padding-top: calc(var(--gap) * 4);
     padding-bottom: 0;
 }
 
