--- a/theme/layouts/_default/list.html
+++ b/theme/layouts/_default/list.html
@@ -88,6 +88,7 @@
   <footer class="entry-footer">
     {{- partial "post_meta.html" . -}}
     {{- partial "translation_list.html" . -}}
+    {{- partial "post_meta_tags.html" . -}}
   </footer>
   {{- end }}
   <a class="entry-link" aria-label="post link to {{ .Title | plainify }}" href="{{ .Permalink }}"></a>
