--- a/theme/layouts/_default/single.html
+++ b/theme/layouts/_default/single.html
@@ -21,12 +21,9 @@
   {{- end }}
 
   <footer class="post-footer">
-    {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }}
-    <ul class="post-tags">
-      {{- range ($.GetTerms $tags) }}
-      <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
-      {{- end }}
-    </ul>
+    {{- if not (eq .Params.HidePostTags true) }}
+    {{- partial "post_meta_tags.html" . }}
+    {{- end }}
 
     {{- if (.Param "ShowPostNavLinks") }}
     {{- partial "post_nav_links.html" . }}
