--- a/theme/assets/css/common/post-entry.css
+++ b/theme/assets/css/common/post-entry.css
@@ -61,6 +61,7 @@
 }
 
 .entry-content {
+    font-family: var(--font-content);
     margin: 8px 0;
     color: var(--secondary);
     font-size: 14px;
