--- a/theme/layouts/partials/footer.html
+++ b/theme/layouts/partials/footer.html
@@ -32,7 +32,7 @@
         {{- if site.Params.fontLicense }}
         {{ site.Params.fontLicense | markdownify }}
         {{- else }}
-        {{ i18n "default_font_license" | default "This site uses [Maru Buri](https://hangeul.naver.com/), [Pretendard](https://github.com/orioncactus/pretendard), [D2Coding](https://github.com/naver/d2codingfont) as web fonts." | markdownify }}
+        {{ i18n "default_font_license" | default "This site uses [Yoon® Daehan](https://font.co.kr/collection/sub?family_idx=10587), [Pretendard](https://github.com/orioncactus/pretendard), [D2Coding](https://github.com/naver/d2codingfont) as web fonts." | markdownify }}
         {{- end }}
     </span>
 </footer>
