--- a/theme/layouts/partials/footer.html
+++ b/theme/layouts/partials/footer.html
@@ -35,6 +35,10 @@
         {{ i18n "default_font_license" | default "This site uses [Yoon® Daehan](https://font.co.kr/collection/sub?family_idx=10587), [Pretendard](https://github.com/orioncactus/pretendard), [D2Coding](https://github.com/naver/d2codingfont) as web fonts." | markdownify }}
         {{- end }}
     </span>
+
+    {{- if site.Params.googleAnalyticsId }}
+    <span>{{ i18n "google_analytics_notice" | default "This site uses Google Analytics to collect anonymous traffic data." }}</span>
+    {{- end }}
 </footer>
 {{- end }}
 
