Default translatable title and placeholder text for search page

--- a/theme/layouts/_default/search.html
+++ b/theme/layouts/_default/search.html
@@ -1,7 +1,10 @@
 {{- define "main" }}
 
+{{ $title := .Title | default (i18n "search" | default "Search") }}
+{{ $placeholder := printf "%s ↵" (.Params.placeholder | default (i18n "search_placeholder" | default "Type to search...")) }}
+
 <header class="page-header">
-    <h1>{{- (printf "%s&nbsp;" .Title ) | htmlUnescape -}}
+    <h1>{{- (printf "%s&nbsp;" $title) | htmlUnescape -}}
         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <circle cx="11" cy="11" r="8"></circle>
@@ -21,8 +24,13 @@
 </header>
 
 <div id="searchbox">
-    <input id="searchInput" autofocus placeholder="{{ .Params.placeholder | default (printf "%s ↵" .Title) }}"
-        aria-label="search" type="search" autocomplete="off" maxlength="64">
+    <input id="searchInput"
+           autofocus
+           placeholder="{{ $placeholder }}"
+           aria-label="search"
+           type="search"
+           autocomplete="off"
+           maxlength="64">
     <ul id="searchResults" aria-label="search results"></ul>
 </div>
 
