2-side footer for extra icons

--- a/theme/assets/css/core/zmedia.css
+++ b/theme/assets/css/core/zmedia.css
@@ -56,7 +56,12 @@
 
     /* footer */
     .footer {
+        flex-direction: column;
         padding: calc((var(--footer-height) - var(--gap) - 10px) / 2) var(--gap);
+    }
+
+    .footer > * {
+        text-align: center !important;
     }
 }
 
