--- a/theme/assets/css/common/footer.css
+++ b/theme/assets/css/common/footer.css
@@ -5,12 +5,34 @@
 }
 
 .footer {
-    max-width: calc(var(--main-width) + var(--gap) * 2);
-    margin: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--gap);
+
+    width: 100%;
     padding: calc((var(--footer-height) - var(--gap)) / 2) var(--gap);
     padding-left: calc(var(--header-width) + var(--gap));
     text-align: center;
     line-height: 24px;
+}
+
+.footer > :first-child {
+    text-align: start;
+}
+
+.footer > :last-child {
+    text-align: end;
+}
+
+.footer > * {
+    flex-grow: 1;
+}
+
+.footer svg {
+    width: 32px;
+    height: 32px;
+    fill: currentColor;
 }
 
 .footer span {
@@ -21,6 +43,13 @@
 .footer a {
     color: inherit;
     border-bottom: 1px solid var(--secondary);
+}
+
+.footer a:has(svg) {
+    display: inline-block;
+    line-height: 0;
+    padding: 4px;
+    border-bottom: none !important;
 }
 
 .footer a:hover {
