Show page nums in main page & Adjust style for paginator

--- a/theme/assets/css/common/main.css
+++ b/theme/assets/css/common/main.css
@@ -29,10 +29,16 @@
     padding: 0 16px;
 }
 
-.pagination .next {
-    margin-inline-start: auto;
+.pagination a.hidden {
+    pointer-events: none;
+    visibility: hidden;
 }
 
+.pagination .num {
+    flex-grow: 1;
+    text-align: center;
+    color: var(--secondary);
+}
 
 .social-icons a {
     display: inline-flex;
