--- a/theme/layouts/partials/cover.html
+++ b/theme/layouts/partials/cover.html
@@ -3,6 +3,7 @@
 {{- if (and .Params.cover.image (not $.isHidden)) }}
 <figure class="entry-cover">
     {{- $loading := cond $.IsSingle "eager" "lazy" }}
+    {{- $fetchPriority := cond $.IsSingle "high" "auto" }}
     {{- $addLink := (and site.Params.cover.linkFullImages $.IsSingle) }}
     {{- $prod := (hugo.IsProduction | or (eq site.Params.env "production")) }}
     {{- $alt := (((.Params.cover.alt | default .Params.cover.caption) | default (printf "%s - Header Image" .Title)) | plainify) }}
@@ -33,6 +34,7 @@
         {{/* i.e it is present in page bundle */}}
         {{- if (and (in $processableFormats $cover.MediaType.SubType) ($responsiveImages) (eq $prod true)) }}
             <img loading="{{ $loading }}"
+                 fetchpriority="{{ $fetchPriority }}"
                  srcset='{{- range $size := $sizes -}}
                             {{- if (ge $cover.Width $size) }}
                                 {{- printf "%s %s" (($cover.Resize (printf "%sx" $size)).RelPermalink) (printf "%sw," $size) }}
@@ -45,11 +47,17 @@
                  height="{{ $cover.Height }}"
                  alt="{{ $alt }}">
         {{- else }}{{/* Unprocessable image or responsive images disabled */}}
-            <img loading="{{ $loading }}" src="{{ $imgdl }}" alt="{{ $alt }}">
+            <img loading="{{ $loading }}"
+                 fetchpriority="{{ $fetchPriority }}"
+                 src="{{ $imgdl }}"
+                 alt="{{ $alt }}">
         {{- end }}
     {{- else }}
         {{- /* For absolute urls and external links, no img processing here */}}
-        <img loading="{{ $loading }}" src="{{ $imgdl }}" alt="{{ $alt }}">
+        <img loading="{{ $loading }}"
+             fetchpriority="{{ $fetchPriority }}"
+             src="{{ $imgdl }}"
+             alt="{{ $alt }}">
     {{- end }}
 
     {{- if $addLink }}
