--- a/theme/assets/css/core/fonts.css
+++ b/theme/assets/css/core/fonts.css
@@ -8,16 +8,18 @@
 /* Korean body font: Yoon Daehan (https://font.co.kr/collection/sub?family_idx=10587) - Free Font: All License */
 @font-face {
     font-family: "Daehan";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Daehan-Regular.woff") format("woff");
     font-weight: normal;
     font-display: swap;
+    src: local("Daehan"),
+         url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Daehan-Regular.woff") format("woff");
 }
 
 @font-face {
     font-family: "Daehan";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Daehan-Bold.woff") format("woff");
     font-weight: 700;
     font-display: swap;
+    src: local("Daehan"),
+         url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Daehan-Bold.woff") format("woff");
 }
 
 /* Korean monospace font: D2Coding (https://github.com/naver/d2codingfont) - SIL OFL v1.1 */
@@ -27,7 +29,7 @@
   font-weight: normal;
   font-display: swap;
   src: local("D2Coding"),
-       url("../../fonts/D2Coding/D2Coding.woff") format("woff");
+       url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/D2Coding.woff") format("woff");
 }
 
 /* Define font variables */
