--- a/theme/assets/css/core/license.css
+++ b/theme/assets/css/core/license.css
@@ -1,6 +1,8 @@
 /*
   PaperMod-somni
-  License: MIT https://github.com/somnisomni/Hugo-PaperMod-somni/blob/main/LICENSE
+  Based on PaperMod v8+
+
+  License: MIT - https://github.com/somnisomni/somni.log/blob/main/theme/LICENSE.md
   Copyright (c) 2020 nanxiaobei and adityatelange
   Copyright (c) 2021-2026 adityatelange
   Copyright (c) 2026 somni
