--- a/theme/assets/css/core/theme-vars.css
+++ b/theme/assets/css/core/theme-vars.css
@@ -1,4 +1,5 @@
 :root {
+    /* Layouts */
     --gap: 24px;
     --content-gap: 20px;
     --header-width: 6rem;
@@ -10,6 +11,13 @@
     --post-header-height: 400px;
     --radius: 8px;
 
+    /* Fonts */
+    --font-content: "Daehan", "Noto Serif CJK KR", "Noto Serif CJK JP", "Noto Serif KR", "Noto Serif JP", "Noto Serif", serif;
+    --font-ui: "Pretendard JP Variable", "Pretendard Variable", sans-serif;
+    --font-header: "Mulish", var(--font-ui);
+    --font-monospace: "D2Coding", "Noto Sans Mono CJK KR", "Noto Sans Mono CJK JP", "Noto Sans Mono", monospace, sans-serif;
+
+    /* Colors */
     --base-light: #F9FBFE;
     --base-dark: #121212;
 
@@ -29,6 +37,7 @@
 }
 
 :root[data-theme="dark"] {
+    /* Colors (Dark) */
     --theme: var(--base-dark);
     --entry: rgb(46, 46, 51);
     --primary: var(--base-light);
